--- a/src/components/GaleriaImagenes.module.css
+++ b/src/components/GaleriaImagenes.module.css
@@ -26,6 +26,11 @@
     border-radius: 4px;
 }
 
-@media  only screen and (max-width: 769px){
-    
+.custom_gradient::after {
+    content: '';
+    background: linear-gradient(to top, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
+    height: 20px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
